name:                nn
version:             0.2.0.0
synopsis:            Command line tool for note taking inspired by Notational Velocity or nvALT.
description:         Please see README.md
homepage:            http://github.com/bjornbm/nn#readme
license:             BSD3
license-file:        LICENSE
author:              Bjorn Buckwalter
maintainer:          bjorn@buckwalter.se
copyright:           Copyright: (c) 2012-2016 Bjorn Buckwalter
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

--library
  --hs-source-dirs:      src
  --exposed-modules:     NNUtil
  --build-depends:       base >= 4.7 && < 5
  --default-language:    Haskell2010

executable nn
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       NNUtil
                     , Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     --, nn
                     , text
                     , unicode-transforms
                     , time
                     , directory
                     , filepath
                     , process
                     , regex-tdfa
                     , split
                     , optparse-applicative >= 0.13
  default-language:    Haskell2010

executable nnselect
  hs-source-dirs:      app
  main-is:             Select.hs
  other-modules:       NNUtil
                     , Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     --, nn
                     , text
                     , unicode-transforms
                     , time
                     , directory
                     , filepath
                     , process
                     , regex-tdfa
                     , split
                     , optparse-applicative >= 0.13
                     , wybor
  default-language:    Haskell2010

test-suite nn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bjornbm/nn
